--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/node": "^20.11.30",
     "@types/uuid": "^9.0.8",
+    "prisma": "^5.11.0",
     "typescript": "^5.4.3"
   }
 }
