--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
@@ -22,18 +23,23 @@
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.0",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cookie-session": "^2.0.48",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/http-status-codes": "^1.2.0",
     "@types/node": "^20.11.30",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/uuid": "^9.0.8",
     "prisma": "^5.11.0",
     "typescript": "^5.4.3"
