--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -106,5 +106,9 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "global.d.ts" // Ensure the global augmentation file is included here
+  ]
 }
