--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "google-auth-library": "^9.7.0",
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
